# etk

./: .gitignore  404.html  Cargo.toml  README.md  index.html  print.html  searchindex.js  searchindex.json
.github/scripts/: prune-prereleases.js
.github/workflows/: generator-generic-ossf-slsa3-publish.yml  gh-pages.yaml  release.yaml  test.yaml
ch01-cli/: ch01-eas.html  ch02-disease.html  index.html
ch02-lang/: ch01-instructions.html  ch02-expressions.html  ch02-labels.html  ch03-labels.html  index.html
ch02-lang/ch03-macros/: ch01-builtins.html  index.html
ch02-lang/ch04-macros/: ch01-builtins.html  ch02-expression.html  ch03-instruction.html  index.html
doc/: book.toml
doc/src/: README.md  SUMMARY.md
doc/src/ch01-cli/: README.md  ch01-eas.md  ch02-disease.md
doc/src/ch02-lang/: README.md  ch01-instructions.md  ch02-expressions.md  ch02-labels.md  ch03-labels.md
doc/src/ch02-lang/ch03-macros/: README.md  ch01-builtins.md
doc/src/ch02-lang/ch04-macros/: README.md  ch01-builtins.md  ch02-expression.md  ch03-instruction.md
etk-4byte/: Cargo.toml  README.md  build.rs
etk-4byte/src/: codegen.rs.tiny.in  lib.rs  signatures.tiny.txt
etk-4byte/tests/: reverse.rs
etk-analyze/: Cargo.toml  README.md
etk-analyze/src/: blocks.rs  cfg.rs  lib.rs  sym.rs
etk-analyze/src/blocks/: annotated.rs  basic.rs
etk-asm/: Cargo.toml  README.md
etk-asm/src/: asm.rs  ast.rs  disasm.rs  ingest.rs  ingest_old.rs  lib.rs  ops.rs
etk-asm/src/ops/: expression.rs  imm.rs  macros.rs  types.rs
etk-asm/src/parse/: args.rs  asm.pest  error.rs  expression.rs  macros.rs  mod.rs
etk-asm/tests/: asm.rs
etk-asm/tests/asm/eof/: main1.etk  main2.etk  main3.etk
etk-asm/tests/asm/every-op/: main.etk  test.etk
etk-asm/tests/asm/expression-macro/: uint.etk
etk-asm/tests/asm/hardfork/: invalid-hardfork.etk  invalid-range.etk  valid-hardfork.etk
etk-asm/tests/asm/include-hex/: hex1.etk  main1.etk
etk-asm/tests/asm/include-hex/subdirectory/: hex2.etk  main2.etk
etk-asm/tests/asm/instruction-macro/: empty_lines.etk  macro-with-2-instructions-per-line.etk  main.etk  undefined-label-undefined-macro.etk
etk-asm/tests/asm/out-of-bounds/main/: main.etk
etk-asm/tests/asm/simple-constructor/: ctor.etk  main.etk
etk-asm/tests/asm/subdirectory/: main.etk
etk-asm/tests/asm/subdirectory/somelib/: helper.etk  somelib.etk
etk-asm/tests/asm/variable-jump/: main.etk
etk-asm/tests/asm/variable-push/: included.etk  main.etk
etk-asm/tests/asm/variable-push2/: main.etk  main1.etk  main2.etk  main3.etk  main4.etk
etk-cli/: Cargo.toml  README.md
etk-cli/src/: errors.rs  io.rs  lib.rs  parse.rs
etk-dasm/: Cargo.toml  README.md
etk-dasm/src/: blocks.rs  lib.rs  sym.rs
etk-dasm/src/blocks/: annotated.rs  basic.rs
etk-ops/: Cargo.toml  README.md  build.rs
etk-ops/src/: cancun.toml  lib.rs  london.toml  prague.toml  shanghai.toml
etk-types/: Cargo.toml
etk-types/benches/: u256.rs
etk-types/src/: lib.rs  num.rs
etk-types/tests/: u256.rs
etk-z-evm/: Cargo.toml
etk-z-evm/src/: constants.rs  error.rs  execution.rs  lib.rs  memory.rs  ops.rs  resolve.rs  stack.rs  storage.rs
etk-z-evm/src/ops/: add.rs  jumpdest.rs  jumpi.rs  mload.rs  mstore.rs  push.rs  sload.rs  sstore.rs  stop.rs
etk-z-evm/tests/: step.rs
gencfg-analyze/: Cargo.toml
gencfg-analyze/src/: lib.rs  sym.rs
gencfg-analyze/src/blocks/: annotated.rs  basic.rs
gencfg-asm/: Cargo.toml
gencfg-asm/src/: asm.pest  asm.rs  cli.rs  disasm.rs  lib.rs  ops.rs  parse.rs
gencfg-asm/src/parse/: asm.pest  mod.rs
gencfg-cli/: Cargo.toml
gencfg-cli/src/: io.rs  lib.rs
src/: main.rs
