[workspace]
members = ["gencfg-asm", "gencfg-analyze", "gencfg-cli"]

[package]
name = "gencfg"
version = "0.1.0"
authors = ["Sam Wilson <sam.wilson@mesh.xyz>"]
edition = "2018"

[features]
default = ["cli"]
cli = ["gencfg-asm/cli", "gencfg-analyze/cli"]

[dependencies]
hex = "0.4.2"
structopt = "0.3"
gencfg-asm = { path = "gencfg-asm" }
gencfg-analyze = { path = "gencfg-analyze" }
