[package]
name = "etk-4byte"
version = "0.2.0"
authors = ["Sam Wilson <sam.wilson@mesh.xyz>"]
license = "MIT OR Apache-2.0"
edition = "2018"
description = "EVM Toolkit function selector database"
homepage = "https://quilt.github.io/etk"
repository = "https://github.com/quilt/etk"
readme = "README.md"
keywords = ["etk", "ethereum"]
categories = ["cryptography::cryptocurrencies", "development-tools"]


[features]
generate = ["reqwest", "tokio", "serde", "phf_codegen"]

[dependencies]
reqwest = { version = "0.11.10", optional = true, features = [ "json" ]}
tokio = { version = "1.18.1", optional = true, features = [ "macros", "sync" ] }
serde = { version = "1.0", optional = true, features = [ "derive" ] }
phf_codegen = { version = "0.10.0", optional = true }
phf = "0.10.1"

[[bin]]
name = "etk-4byte-generate"
required-features = [ "generate" ]

[[bin]]
name = "etk-4byte-phf"
required-features = [ "generate" ]
