[package]
name = "etk-analyze"
version = "0.2.0-dev"
authors = ["Sam Wilson <sam.wilson@mesh.xyz>", "lightclient <lightclient@protonmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"
description = "EVM Toolkit analysis tools"
homepage = "https://quilt.github.io/etk"
repository = "https://github.com/quilt/etk"
readme = "README.md"
keywords = ["etk", "ethereum", "disassembler"]
categories = ["cryptography::cryptocurrencies", "command-line-utilities", "development-tools"]

[features]
cli = ["structopt", "etk-cli", "cfg", "snafu"]
cfg = ["z3", "petgraph"]

[dependencies]
hex = "0.4.3"
etk-asm = { path = "../etk-asm", version = "0.2.0-dev" }
structopt = { optional = true, version = "0.3.21" }
etk-cli = { optional = true, path = "../etk-cli", version = "0.2.0-dev" }
z3 = { optional = true, version = "0.10.0" }
snafu = { optional = true, version = "0.6.10" }

[dependencies.petgraph]
optional = true
version = "0.5.1"
default-features = false

[dev-dependencies]
hex-literal = "0.3.1"
assert_matches = "1.5.0"

[[bin]]
name = "disease"
required-features = ["cli"]

[[bin]]
name = "ecfg"
required-features = ["cli"]
