[package]
name = "etk-analyze"
version = "0.2.1"
edition = "2018"
authors = ["Sam Wilson <sam.wilson@mesh.xyz>", "lightclient <lightclient@protonmail.com>"]
license = "MIT OR Apache-2.0"
description = "EVM Toolkit analysis tools"
homepage = "https://quilt.github.io/etk"
repository = "https://github.com/quilt/etk"
readme = "README.md"
keywords = ["etk", "ethereum"]
categories = ["cryptography::cryptocurrencies", "command-line-utilities", "development-tools"]

[features]
cli = ["etk-cli", "etk-asm", "structopt", "snafu"]

[dependencies]
snafu = { optional = true, version = "0.7.1" }
structopt = { optional = true, version = "0.3.26" }
etk-cli = { optional = true, path = "../etk-cli", version = "0.2.1" }
etk-asm = { optional = true, path = "../etk-asm", version = "0.2.1" }
etk-dasm = { path = "../etk-dasm", version = "0.2.1" }
z3 = "0.11.2"

[dependencies.petgraph]
version = "0.6.0"
default-features = false

[dev-dependencies]
assert_matches = "1.5.0"
etk-asm = { path = "../etk-asm", version = "0.2.1" }
hex-literal = "0.3.4"

[[bin]]
name = "ecfg"
required-features = ["cli"]
