[package]
name = "etk-analyze"
version = "0.4.0-dev"
edition = "2018"
authors = [
    "Sam Wilson <sam.wilson@mesh.xyz>",
    "lightclient <lightclient@protonmail.com>",
]
license = "MIT OR Apache-2.0"
description = "EVM Toolkit analysis tools"
homepage = "https://quilt.github.io/etk"
repository = "https://github.com/quilt/etk"
readme = "README.md"
keywords = ["etk", "ethereum"]
categories = [
    "cryptography::cryptocurrencies",
    "command-line-utilities",
    "development-tools",
]

[features]
cli = ["etk-cli", "etk-asm", "clap", "snafu"]

[dependencies]
snafu = { optional = true, version = "0.7.1" }
clap = { optional = true, version = "3.1", features = ["derive"] }
etk-cli = { optional = true, path = "../etk-cli", version = "0.4.0-dev" }
etk-asm = { optional = true, path = "../etk-asm", version = "0.4.0-dev" }
etk-dasm = { path = "../etk-dasm", version = "0.4.0-dev" }
etk-ops = { path = "../etk-ops", version = "0.4.0-dev" }
z3 = { version = "0.11.2", features = ["static-link-z3"] }

[dependencies.petgraph]
version = "0.6.0"
default-features = false

[dev-dependencies]
assert_matches = "1.5.0"
etk-asm = { path = "../etk-asm", version = "0.4.0-dev" }
hex-literal = "0.3.4"

[[bin]]
name = "ecfg"
required-features = ["cli"]
