[package]
name = "etk-asm"
version = "0.2.0"
authors = ["Sam Wilson <sam.wilson@mesh.xyz>", "lightclient <lightclient@protonmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"
description = "EVM Toolkit assembler"
homepage = "https://quilt.github.io/etk"
repository = "https://github.com/quilt/etk"
readme = "README.md"
keywords = ["etk", "ethereum", "assembler"]
categories = ["cryptography::cryptocurrencies", "command-line-utilities", "development-tools", "compilers"]

[features]
cli = ["structopt", "etk-cli"]
backtraces = [ "snafu/backtraces" ]

[dependencies]
etk-cli = { optional = true, path = "../etk-cli", version = "0.2.0" }
hex = "0.4.3"
num-bigint = "0.4"
pest = "2.1.3"
pest_derive = "2.1"
rand = "0.8.5"
sha3 = "0.10.1"
structopt = { optional = true, version = "0.3.26" }
snafu = { version = "0.7.1", default-features = false, features = [ "std" ] }

[dev-dependencies]
assert_matches = "1.5.0"
tempfile = "3.3.0"
hex-literal = "0.3.4"

[[bin]]
name = "eas"
required-features = ["cli"]
