[package]
name = "etk-cli"
version = "0.2.0-dev"
authors = ["Sam Wilson <sam.wilson@mesh.xyz>", "lightclient <lightclient@protonmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"
description = "Ethereum Toolkit command-line utilities"
homepage = "https://quilt.github.io/etk"
repository = "https://github.com/quilt/etk"
readme = "README.md"
keywords = ["etk", "ethereum", "cli"]
categories = ["cryptography::cryptocurrencies", "command-line-utilities", "development-tools", "command-line-interface"]

[dependencies]
hex = "0.4.3"
structopt = "0.3.21"

[dev-dependencies]
hex-literal = "0.3.1"
