[package]
name = "etk-dasm"
version = "0.3.0-dev"
authors = ["Sam Wilson <sam.wilson@mesh.xyz>", "lightclient <lightclient@protonmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"
description = "EVM Toolkit disassembler"
homepage = "https://quilt.github.io/etk"
repository = "https://github.com/quilt/etk"
readme = "README.md"
keywords = ["etk", "ethereum", "disassembler"]
categories = ["cryptography::cryptocurrencies", "command-line-utilities", "development-tools"]

[features]
cli = ["clap", "etk-cli", "snafu", "etk-4byte"]

[dependencies]
hex = "0.4.3"
etk-asm = { path = "../etk-asm", version = "0.3.0-dev" }
clap = { optional = true, version = "3.1", features = ["derive"] }
etk-cli = { optional = true, path = "../etk-cli", version = "0.3.0-dev" }
etk-4byte = { optional = true, path = "../etk-4byte", version = "0.3.0-dev" }
snafu = { optional = true, version = "0.7.1" }

[dev-dependencies]
hex-literal = "0.3.4"

[[bin]]
name = "disease"
required-features = ["cli"]
