[package]
name = "gencfg-analyze"
version = "0.1.0"
authors = ["Sam Wilson <sam.wilson@mesh.xyz>"]
edition = "2018"

[features]
cli = ["structopt", "gencfg-cli"]

[dependencies]
gencfg-asm = { path = "../gencfg-asm" }
structopt = { optional = true, version = "0.3.21" }
gencfg-cli = { optional = true, path = "../gencfg-cli" }

[[bin]]
name = "disease"
required-features = ["cli"]
